# http-rider

./: .gitignore  .pre-commit-config.yaml  .pyproject.toml  .travis.yml  CNAME  LICENSE  Makefile  README.md  dmg.json  httprider.spec  install.command  main.spec  mk-icns.sh  pre-build.sh  pyproject.toml  requirements.txt  setup.py
.trae/rules/: project_rules.md
assets/: generate-icons.sh  icon.icns
docs/: 404.html  feed.json  feed.xml  files.publii.json  hello-world.html  index.html  search.html  sitemap.xml
docs/amp/: hello-world.html  index.html
docs/amp/authors/nl/: index.html
docs/assets/css/: style.css
docs/authors/nl/: index.html
httprider/: __init__.py  application.py  debug_app.py  main.py  playground_app.py  resources.qrc  resources_rc.py  test.py
httprider.egg-info/: SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
httprider/codegen/: http_status_code_mapping.py  json_schema_code_generator.py  schema_to_java_generator.py
httprider/core/: __init__.py  api_call_interactor.py  app_state_interactor.py  constants.py  core_settings.py  environment_interactor.py  faker_config.py  generators.py  http_statuses.py  json_data_generator.py  json_generator.py  json_schema.py  markdown_renderer.py  pygment_styles.py  rest_api_interactor.py  safe_rest_api_interactor.py  theme_mode.py  util_functions.py  worker_pool.py
httprider/exporters/: __init__.py  common.py  exporter_apickli.py  exporter_confluence.py  exporter_curl.py  exporter_java_feign_client.py  exporter_locust_tests.py  exporter_markdown.py  exporter_mermaid.py  exporter_openapi_v3.py  exporter_plantuml.py  exporter_postman_dump.py  exporter_python_requests.py  exporter_restassured.py  exporter_runscope.py  exporter_slow_cooker.py  exporter_spring_boot_api_java.py  exporter_spring_contract_tests.py
httprider/httprider.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
httprider/importers/: __init__.py  importer_curl.py  importer_openapi_v3.py  importer_postman_collections.py
httprider/interactors/: share_service_interactor.py
httprider/model/: __init__.py  app_configuration.py  app_data.py  app_data_cache.py  app_data_reader.py  app_data_writer.py  completer.py  storage.py  user_data.py
httprider/presenters/: __init__.py  api_calls_history_presenter.py  api_list_presenter.py  assertion_builder_presenter.py  assertion_list_presenter.py  assertion_result_presenter.py  body_assertion_presenter.py  code_generator_presenter.py  common.py  common_utils.py  config_presenter.py  data_generator_presenter.py  empty_frame_presenter.py  environment_configuration_presenter.py  environments_menu_presenter.py  envs_list_presenter.py  exchange_presenter.py  file_menu_presenter.py  fuzz_test_presenter.py  generators_menu_presenter.py  headers_assertions_presenter.py  importer_presenter.py  kv_list_presenter.py  main_presenter.py  mocked_response_presenter.py  oepnapi_sdk_generator_presenter.py  project_info_presenter.py  request_presenter.py  share_preview_presenter.py  tags_list_presenter.py  utility_functions_presenter.py
httprider/tests/core/: test_core.py  test_json_schema.py
httprider/tests/exporters/: test_openapi_v3.py
httprider/tests/presenters/: object_builder.py  test_openapi_sdk_generator.py  test_presenters.py
httprider/themes/: dark.qss  light.qss  light_theme.py  pyg-dark.css  theme.py  theme_provider.py
httprider/ui/: __init__.py  assertion_builder_dialog.py  code_generator_dialog.py  configuration_dialog.py  data_generator_dialog.py  environment_configuration_dialog.py  fuzz_test_dialog.py  import_text_dialog.py  main_window.py  menus.py  openapi_sdk_generator_dialog.py  progress_dialog.py  project_info_dialog.py  share_preview_dialog.py  shortcuts.py  toolbar.py  updater_dialog.py  utility_functions_dialog.py
httprider/widgets/: api_call_widget.py  api_calls_list_view.py  completion_line_edit.py  completion_plain_text.py  json_tree_widget.py  key_value_widget.py  new_header_widget.py  new_tag_entry_input.py  overlayed_widgets.py  search_line_edit_widget.py  tag_info_widget.py  tag_label_widget.py
packaging/data/icons/: httprider.icns
requirements/: base.txt  build.txt  dev.txt
resources/: resources.qrc
resources/themes/: dark.qss  light.qss  pyg-dark.css  pyg-light.css
resources/ui/: assertion_builder_dialog.ui  base_window.ui  code_generator_dialog.ui  configuration_dialog.ui  debug_window.ui  environment_configuration_dialog.ui  faker_dialog.ui  fuzz_test_dialog.ui  import_text_dialog.ui  key_value_widget.ui  new_item_widget.ui  openapi_sdk_gen_dialog.ui  progress_dialog.ui  project_info_dialog.ui  share_preview_dialog.ui  tag_info_widget.ui  tag_label_widget.ui  tools_dialog.ui
sample/: httprider_sample.db  httprider_test_suite.db
scripts/: install-macosx.sh
