[project]
name = "httprider"
version = "0.6.4"
description = "Simple and Powerful cross-platform Rest API client"
authors = [{ name = "Namuan", email = "info@bettercallbots.com" }]
readme = "README.md"
license = {text = "MIT"}
keywords = ['python', 'rest', 'api', 'client', 'desktop']
requires-python = ">=3.11"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
]
dependencies = [
    "PyQt6",
    "requests",
    "attrs",
    "cattrs",
    "Faker",
    "objectpath",
    "jsonpath-ng",
    "uncurl",
    "Pygments",
    "prance",
    "openapi-spec-validator",
    "apispec",
    "apispec[yaml]",
    "apispec[validation]",
    "genson",
    "dataset",
    "yapf",
    "stringcase",
    "mistune",
    "darkdetect",
]

[project.urls]
Homepage = "https://deskriders.dev"
Repository = "https://github.com/namuan/httprider"

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-qt",
    "pre-commit",
    "black",
    "flake8",
    "ruff",
    "pyinstaller",
    "radon",
    "xenon",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["httprider*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120
fix = true

[tool.ruff.lint]
select = [ "ALL" ]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    "TRY003",
    "TRY300",
    "TRY301",
    "E741",
    "F403",
    "F405",
    "D",
    "ANN",
    "PLR2004",
    # Newly added codes from make check
    "ARG001",
    "ARG002",
    "BLE001",
    "ERA001",
    "FBT002",
    "FBT003",
    "G004",
    "G202",
    "INP001",
    "N801",
    "N802",
    "N803",
    "N806",
    "N814",
    "PERF403",
    "PLC0414",
    "PLR0911",
#    "PLR0913",
#    "PLR0915",
#    "PLW0211",
#    "PLW0603",
#    "PTH120",
#    "PTH123",
#    "SIM115",
#    "SLF001",
]

[tool.ruff.lint.per-file-ignores]
"httprider/tests/*" = ["S101"]
"httprider/generated/*" = ["E402", "PLR0915"]
"httprider/widgets/*" = ["N", "ARG002"]
"httprider/ui/*" = ["N", "ARG002"]

[tool.ruff.format]
preview = true

[project.scripts]
http-rider = "httprider.application:main"
